# exgentic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .whitesource  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  renovate.json  ruff.toml  whitesource.config
.github/workflows/: pre-commit.yml  publish-pypi.yml  tests.yml
docs/: OTEL_QUICKSTART.md  OTEL_SEMANTIC_CONVENTIONS.md  README.md  adding-agents.md  adding-benchmarks.md  batch.md  cli-reference.md  custom-models.md  huggingface.md  observers.md  output-format.md  podman-macos.md  python-api.md  releasing.md  replay-testing.md  runners.md
docs/observability/: quickstart.md  semantic-conventions.md
examples/: run_appworld.py  run_browsecomp.py  run_claude_code_on_gsm8k.py  run_claude_code_on_tau2bench.py  run_cli_agents.py  run_gsm8k.py  run_hotpotqa.py  run_openai_mcp.py  run_smol.py  run_swebench.py  run_taubench.py
examples/simple_test_agent/: adapter.py  setup.sh
misc/security/: setup_environments.sh
misc/security/requirements/: README.md
misc/security/requirements/appworld/: requirements.txt
misc/security/requirements/browsecompplus/: requirements.txt
misc/security/requirements/core/: requirements.txt
misc/security/requirements/gsm8k/: requirements.txt
misc/security/requirements/hotpotqa/: requirements.txt
misc/security/requirements/swebench/: requirements.txt
misc/security/requirements/tau2/: requirements.txt
misc/skills/add-agent/: SKILL.md
misc/skills/add-benchmark/: SKILL.md
misc/utils/: .secrets.baseline  enforce_dependency_caps.py  enforce_library_imports.py  enforce_relative_imports.py  enforce_spdx_header.py
scripts/: release.sh
src/exgentic/: __init__.py
src/exgentic/adapters/actions/: chat.py  functions.py
src/exgentic/adapters/agents/: code_agent.py  coordinator.py  mcp_agent.py  mcp_server.py
src/exgentic/adapters/executors/: __init__.py  executer.py  process.py  proxy.py  remote_process_class.py
src/exgentic/adapters/runners/: __init__.py  _utils.py  direct.py  docker.py  process.py  service.py  thread.py  transport.py  venv.py
src/exgentic/adapters/schemas/: json_schema.py  openai.py
src/exgentic/agents/: __init__.py
src/exgentic/agents/cli/: __init__.py  base.py  command_runner.py  requirements.txt
src/exgentic/agents/cuga_sdk/: __init__.py  cuga_sdk_agent.py  instance.py  requirements.txt  setup.sh
src/exgentic/agents/litellm_tool_calling/: instance.py  litellm_tool_calling_agent.py  setup.sh  utils.py
src/exgentic/agents/openai/: instance.py  openai_mcp_agent.py  requirements.txt  setup.sh
src/exgentic/agents/replay/: replay_agent.py  replay_benchmark.py  replay_session.py
src/exgentic/agents/smolagents/: __init__.py  base_agent.py  base_instance.py  code_agent.py  code_instance.py  requirements.txt  setup.sh  structured_code_agent.yaml  tool_calling_agent.py  tool_calling_instance.py
src/exgentic/benchmarks/appworld/: __init__.py  appworld_benchmark.py  appworld_eval.py  requirements.txt  setup.sh
src/exgentic/benchmarks/bfcl/: __init__.py  bfcl_benchmark.py  bfcl_eval.py  bfcl_shim.py  setup.sh
src/exgentic/benchmarks/browsecompplus/: browsecomp_benchmark.py  browsecomp_eval.py  make_light_dataset.py  requirements.txt  retriever.py  search_service.py  search_tool_handler.py  searcher_cache.py  setup.sh
src/exgentic/benchmarks/gsm8k/: gsm8k_benchmark.py  setup.sh
src/exgentic/benchmarks/hotpotqa/: hotpotqa_benchmark.py  requirements.txt  setup.sh
src/exgentic/benchmarks/swebench/: readme.md  (+9 more)
src/exgentic/core/: __init__.py  actions.py  agent.py  agent_instance.py  benchmark.py  context.py  evaluator.py  runner_mixin.py  session.py
src/exgentic/environment/: __init__.py  docker.py  helpers.py  instance.py  local.py  manager.py  protocol.py  venv.py
src/exgentic/interfaces/: registry.py
src/exgentic/testing/: __init__.py  agent.py  benchmark.py  calculator.py  docker_session.py
src/exgentic/utils/: cache.py  container_reaper.py  cost.py  disk_cache.py  installation_tracker.py  installer.py  logging.py  otel.py  paths.py  settings.py  sync.py
tests/: __init__.py  test_coordinator.py  test_env_loading.py  test_integrations_functions.py
tests/adapters/: test_executer_context.py
tests/adapters/runners/: __init__.py  conftest.py  test_docker.py  test_e2e_session.py  test_process.py  test_thread.py  test_transport.py  test_transport_liveness.py  test_utils.py  test_venv.py
tests/agents/: test_litellm_params_extra.py  test_tool_calling_utils.py
tests/agents/cli/: test_claude_cli_config.py  test_cli_context_env.py  test_cli_error_surfacing.py
tests/api/: __init__.py  conftest.py  test_agent_package_integrity.py  test_api_errors.py  test_api_files.py  test_api_instances.py  test_api_limits.py  test_api_missing_results.py  test_api_random.py  test_api_reuse.py  test_api_run_config.py  test_api_runners.py  test_api_session_config.py  test_cli_batch.py  test_cli_commands.py  test_cli_compare.py  test_cli_litellm_params_extra.py  test_cli_version.py  test_package_exports.py  test_plan_config_observers.py  test_run_status_parallel.py
tests/api/fixtures/: __init__.py  test_agent.py  test_benchmark.py
tests/benchmarks/: test_benchmark_replay.py  test_litellm_params_extra.py  test_tau2_aggregate.py  test_tau2_data_dir.py
tests/core/: test_actions.py  test_context_env.py  test_run_results_version.py  test_session_inventory.py  test_session_observer_lifecycle.py  test_session_status.py  test_task_list_cache.py
tests/environment/: test_integration.py  test_manager.py  test_venv_lock.py
tests/integrations/: test_mcp_agent.py  test_mcp_server.py
tests/integrations/litellm/: test_health.py  test_health_litellm_params_extra.py  test_trace_cost.py  test_trace_logger_context.py
tests/interfaces/dashboard/: test_data.py  test_events.py  test_formatting.py  test_forms.py  test_status.py
tests/observers/: test_otel.py
tests/setup/: __init__.py  test_tool_install.py
tests/utils/: test_container_reaper.py  test_cost.py  test_installer.py  test_litellm_cache_settings.py
(+114 files in other folders)
